--- a/bsconfig.json
+++ b/bsconfig.json
@@ -16,6 +16,6 @@
   ],
   "suffix": ".bs.js",
   "namespace": true,
-  "bs-dependencies": ["bs-webapi", "reason-react"],
+  "bs-dependencies": ["bs-fetch", "bs-webapi", "reason-react"],
   "refmt": 3
 }
