--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@frontarm/demoboard": "^0.1.25",
+    "@frontarm/demoboard-core": "^0.1.25",
+    "bs-fetch": "^0.5.0",
     "bs-webapi": "^0.15.6",
+    "console-feed": "^2.8.11",
+    "konan": "^1.2.1",
+    "polestar": "^0.1.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "reason-react": ">=0.7.0"
@@ -26,8 +32,11 @@
   "devDependencies": {
     "bs-platform": "^7.0.2-dev.1",
     "css-loader": "^3.2.0",
+    "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.0.0",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.4",
     "webpack": "^4.0.1",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.8"
